Layer Prototype (#821)